[gd_scene load_steps=10 format=3 uid="uid://c7pdnedv1773q"]

[ext_resource type="Texture2D" uid="uid://dsbpgrrrklcyb" path="res://res/img/UI/user_info_panel.png" id="1_10vcv"]
[ext_resource type="Script" path="res://scripts/slide/userInfoPanel.gd" id="1_o8a64"]
[ext_resource type="PackedScene" uid="uid://joccdbmjel3s" path="res://scene/ui/face_1.tscn" id="2_gxith"]
[ext_resource type="Texture2D" uid="uid://dtqanytm0bvuy" path="res://res/img/UI/info_info_normal.png" id="2_vdmca"]
[ext_resource type="Texture2D" uid="uid://dloxqimoc3m03" path="res://res/img/UI/info_info_selected.png" id="3_0o0x0"]
[ext_resource type="Texture2D" uid="uid://sbjsgtoyd67t" path="res://res/img/UI/info_recent_normal.png" id="4_r1ljp"]
[ext_resource type="Texture2D" uid="uid://wjp7qyml5vsl" path="res://res/img/UI/info_recent_selected.png" id="5_8muym"]
[ext_resource type="Texture2D" uid="uid://b43bnwm3ifssv" path="res://res/img/UI/info_sns_normal.png" id="6_jnrby"]
[ext_resource type="Texture2D" uid="uid://bebmjmfjjbgsh" path="res://res/img/UI/info_sns_selected.png" id="7_xe5f7"]

[node name="UserInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1046.0
offset_bottom = -334.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8a64")
face1 = ExtResource("2_gxith")

[node name="UserInfoPanel" type="Sprite2D" parent="."]
position = Vector2(288, 296)
texture = ExtResource("1_10vcv")

[node name="InfoButton" type="TextureButton" parent="."]
z_index = 1
layout_mode = 2
offset_left = 180.0
offset_top = -31.0
offset_right = 387.0
offset_bottom = 65.0
texture_normal = ExtResource("2_vdmca")
texture_pressed = ExtResource("3_0o0x0")

[node name="RecentButton" type="TextureButton" parent="."]
z_index = 2
layout_mode = 2
offset_left = -22.0
offset_top = -33.0
offset_right = 209.0
offset_bottom = 63.0
texture_normal = ExtResource("4_r1ljp")
texture_pressed = ExtResource("5_8muym")

[node name="SNSButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 360.0
offset_top = -35.0
offset_right = 583.0
offset_bottom = 61.0
texture_normal = ExtResource("6_jnrby")
texture_pressed = ExtResource("7_xe5f7")

[connection signal="gui_input" from="InfoButton" to="." method="_on_info_button_gui_input"]
[connection signal="gui_input" from="RecentButton" to="." method="_on_recent_button_gui_input"]
[connection signal="gui_input" from="SNSButton" to="." method="_on_sns_button_gui_input"]
